<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bootstrap</string>
    <string name="welcome">Welcome</string>
    <string name="get_work_error">Get work error, please check your network connection.</string>
    <string name="device_inspect">Device Inspect</string>
    <string name="content_column">Content</string>
    <string name="page_referrers">Referrers</string>
    <string name="refresh_action">Refresh</string>
    <string name="logout_action">Logout</string>
    <string name="page_news">News</string>
    <string name="page_users">Users</string>
    <string name="page_checkins">Check In\'s</string>
    <string name="page_works">Works</string>
    <string name="page_apply">Apply</string>
    <string name="page_defect">Defect</string>
    <string name="page_weather">Weather</string>
    <string name="page_tools">Tools</string>
    <string name="page_security">Security</string>
    <string name="page_scan">Scan</string>
    <string name="page_result">Result</string>
    <string name="page_forecast">Forecast</string>
    <string name="page_device_info">Device Info</string>
    <string name="page_device_defect">Device Defect</string>
    <string name="page_device_form">Device Form</string>
    <string name="title_column">Title</string>
    <string name="location_column">Location</string>
    <string name="user_column">User</string>
    <string name="date_column">Date</string>
    <string name="work_type_column">Type</string>
    <string name="work_state_column">State</string>
    <string name="work_todo">TODO</string>
    <string name="work_done">DONE</string>
    <string name="defect_device_column">Device</string>
    <string name="defect_no_column">No.</string>
    <string name="defect_description_column">Description</string>
    <string name="result_device_column">Device</string>
    <string name="error_loading_users">Loading users failed</string>
    <string name="error_loading_news">Loading news failed</string>
    <string name="error_loading_checkins">Loading check-ins failed</string>
    <string name="error_loading_works">Loading works failed</string>
    <string name="error_loading_defects">Loading defects failed</string>
    <string name="error_loading_device_results">Loading device results failed</string>
    <string name="no_users">No Users</string>
    <string name="no_news">No News</string>
    <string name="no_works">No Works</string>
    <string name="no_defects">No Defects</string>
    <string name="no_device_results">No Device Results</string>
    <string name="avatar">Avatar</string>
    <string name="choose">Choose</string>
    <string name="button_prev">prev</string>
    <string name="button_next">next</string>
    <string name="button_scan">scan</string>
    <string name="button_submit">submit</string>
    <string name="button_upload">upload</string>
    <string name="button_close">close</string>
    <string name="button_edit">edit</string>
    <string name="apply_date">Apply Date</string>
    <string name="apply_type">Apply Type</string>
    <string name="apply_reason">Apply Reason</string>
    <string name="apply_try">Try to Apply</string>
    <string name="apply_wait">Applying, please wait.</string>
    <string name="apply_success">Apply Success</string>
    <string name="apply_failed">Apply Failed</string>
    <string name="apply_error">Apply Error</string>
    <string name="apply_cancel">Apply Cancel</string>
    <string name="upload_try">Try to upload</string>
    <string name="upload_wait">Uploading, please wait.</string>
    <string name="upload_success">Upload Success</string>
    <string name="upload_failed">Upload Failed</string>
    <string name="upload_error">Upload Error</string>
    <string name="upload_cancel">Upload Cancel</string>

    <!-- navigation -->
    <string name="title_timer">Timer</string>
    <string name="home">Home</string>
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Close</string>
    <string name="title_home">Home</string>
    <string name="title_work">Work</string>
    <string name="title_user_info">User Info</string>
    <string name="title_substation_info">Substation Info</string>

    <!-- AuthenticatorActivity -->
    <string name="label_email_address">Email Address</string>
    <string name="label_password">Password</string>
    <string name="label_sign_in">Sign In</string>
    <string name="message_signing_in">Signing in…</string>
    <string name="blank_field_warning">Please populate this field</string>
    <string name="signup_link">New to Bootstrap? &lt;a href=http://www.androidbootstrap.com>Click here&lt;/a> to learn more.</string>
    <string name="message_bad_credentials">Email Address or Password is incorrect</string>
    <string name="message_auth_failed">Please enter a valid password</string>
    <string name="message_auth_failed_new_account">Please enter a valid email address &amp; password</string>
    <string name="timer_running">Timer is running</string>
    <string name="timer_is_paused">Timer is paused</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>


    <!-- Inspect Type -->
    <string name="inspect_normal_total">全面巡检</string>
    <string name="inspect_normal_daily">日常巡检</string>
    <string name="inspect_special_thunderstorm">雷雨特殊巡检</string>
    <string name="inspect_special_snowy">雪天特殊巡检</string>
    <string name="inspect_special_foggy">大雾特殊巡检</string>
    <string name="inspect_special_windy">大风特殊巡检</string>
    <string name="inspect_special_nightlight">夜间熄灯特殊巡检</string>
    <string name="inspect_special_bugtrace">设备异常缺陷跟踪特殊巡检</string>
    <string name="inspect_job_infraredtesting">红外线测试作业</string>
    <string name="inspect_job_switchcooler">主变冷却器切换实验作业</string>
    <string name="inspect_job_emergencylightswitch">事故照明灯切换作业</string>
    <string name="inspect_job_batteryperiodictesting">蓄电池定期测试作业</string>
    <string name="inspect_job_deviceperiodictestingrotation">设备定期测试、轮换作业</string>
    <string name="inspect_job_deviceperiodicmaintance">设备定期维护作业</string>
    <string name="inspect_job_barriergateoperate">道闸操作作业</string>

    <!-- 天气信息输入 -->
    <string name="weather_time">时间:</string>
    <string name="weather_temperature">温度（℃）:</string>
    <string name="weather_humidity">湿度（RH）:</string>
    <string name="weather_person">负责人:</string>
    <string name="no.">序号</string>

    <!-- 工具信息输入 -->
    <string name="tool_name">名称</string>
    <string name="tool_type">规格</string>
    <string name="tool_unit">单位</string>
    <string name="tool_num">数量</string>
    <string name="tool_remark">备注</string>
    <string name="tool_name_helmet">安全帽</string>
    <string name="tool_name_gloves">绝缘手套</string>
    <string name="tool_name_boots">绝缘靴</string>
    <string name="tool_name_telescope">望远镜</string>
    <string name="tool_name_thermodetector">测温仪</string>
    <string name="tool_name_lamp">应急灯</string>
    <string name="tool_name_key">钥匙</string>
    <string name="tool_name_goggle">护目镜</string>
    <string name="tool_name_interphone">对讲机</string>
    <string name="tool_unit_ding">顶</string>
    <string name="tool_unit_shuang">双</string>
    <string name="tool_unit_fu">副</string>
    <string name="tool_unit_tai">台</string>
    <string name="tool_unit_zhan">盏</string>
    <string name="tool_unit_tao">套</string>
    <string name="tool_unit_ge">个</string>
    <string name="tool_remark_helmet">视巡检人员数量定</string>
    <string name="tool_remark_gloves">根据巡检需要，视巡检人员数量定</string>
    <string name="tool_remark_boots">视巡检人员数量定，特殊天气及接地网接地电阻不合格时使用</string>
    <string name="tool_remark_telescope">根据现场需要定</string>
    <string name="tool_remark_thermodetector">根据现场需要定</string>
    <string name="tool_remark_lamp">根据现场需要定</string>
    <string name="tool_remark_key">根据现场需要定</string>
    <string name="tool_remark_goggle">视巡检人员数量定</string>
    <string name="tool_remark_interphone">（无）</string>

    <!-- 危险点及安全控制措施输入 -->
    <string name="security_item">危险点</string>
    <string name="security_measure">控制措施</string>

    <!-- RFID扫描相关字符串 -->
    <string name="scan_label">扫描标签</string>
    <string name="scan_button_test">测试</string>
    <string name="scan_button_scan">扫描</string>

    <!-- 设备巡检结果相关 -->
    <string name="inspect_result">巡检结果</string>
    <string name="device_content">巡检内容</string>
    <string name="device_standard">巡检标准</string>
    <string name="device_result">填写结果</string>
    <string name="device_id">设备ID</string>
    <string name="device_type_id">设备类型ID</string>
    <string name="device_name">设备名称</string>
    <string name="device_date">投产时间</string>
    <string name='exception_input'>请输入异常信息</string>
    <string name="title_activity_exception">异常信息采集</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- 用户信息 -->
    <string name="user_name">姓名</string>
    <string name="user_post">职位</string>
    <string name="user_department">部门</string>
    <string name="user_substation">所属变电站</string>

    <!-- Exception -->
    <string name="error_blank">Please fill the form.</string>
    <string name="error_no_device_result">Please scan some devices to add device inspect result.</string>
    <string name="error_404">Not Found.</string>

</resources>
