<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content">

    <LinearLayout
        android:background="@drawable/stripe_repeat"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/no."/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/tool_name"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/tool_type"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/tool_unit"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/tool_num"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/tool_remark"/>
        <CheckBox
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:checked="true"
            android:clickable="false"
            android:layout_gravity="center"
            android:gravity="center" />


    </LinearLayout>

    <ListView
        android:id="@+id/tools_list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"/>

</LinearLayout>
