<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bootstrapbutton="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_2"
    >

    <LinearLayout
        android:layout_width="fill_parent"
        android:background="@drawable/stripe_repeat"
        android:textSize="18sp"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_no"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/no."/>

        <TextView
            android:id="@+id/tv_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/device_content"/>

        <TextView
            android:id="@+id/tv_standard"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/device_standard"/>

        <TextView
            android:id="@+id/tv_result"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/device_result"/>

    </LinearLayout>

    <ListView
        android:id="@+id/inspect_detail"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="8"/>

</LinearLayout>