<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bootstrapbutton="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:padding="25dp">


    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_height="40dp"
        android:layout_marginTop="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/apply_date"/>

        <EditText
            android:id="@+id/date"
            android:inputType="none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:singleLine="true"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_height="40dp"
        android:layout_marginTop="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/apply_type"/>
        <Spinner
            android:id="@+id/type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/apply_reason"
            android:layout_gravity="left" />

        <com.beardedhen.androidbootstrap.BootstrapEditText
            android:id="@+id/reason"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            android:gravity="top"
            android:cursorVisible="true"
            bootstrapbutton:be_roundedCorners="true"
            bootstrapbutton:be_state="success"
            />
    </LinearLayout>

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/submit"
        android:text="@string/button_submit"
        android:layout_width="wrap_content"
        bootstrapbutton:bb_roundedCorners="true"
        bootstrapbutton:bb_type="default"
        bootstrapbutton:bb_icon_right="fa-check"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"/>

</LinearLayout>