<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:padding="25dp">


    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_height="40dp"
        android:layout_marginTop="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/device_id"/>

        <EditText
            android:id="@+id/device_id"
            android:editable="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:singleLine="true"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_height="40dp"
        android:layout_marginTop="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/device_name"/>

        <EditText
            android:id="@+id/device_name"
            android:editable="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:singleLine="true"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_height="40dp"
        android:layout_marginTop="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/device_date"/>

        <EditText
            android:id="@+id/device_date"
            android:editable="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:singleLine="true"/>
    </LinearLayout>

</LinearLayout>