<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/back_2"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:padding="25dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_height="40dp"
            android:layout_marginTop="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/user_name"/>

            <EditText
                android:id="@+id/user_name"
                android:editable="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:singleLine="true"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_height="40dp"
            android:layout_marginTop="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/user_department"/>

            <EditText
                android:id="@+id/user_department"
                android:editable="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:singleLine="true"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_height="40dp"
            android:layout_marginTop="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/user_post"/>

            <EditText
                android:id="@+id/user_post"
                android:editable="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:singleLine="true"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_height="40dp"
            android:layout_marginTop="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/user_substation"/>

            <EditText
                android:id="@+id/user_substation"
                android:editable="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:singleLine="true"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>